--- a/src/app/features/auth/login/login.component.html
+++ b/src/app/features/auth/login/login.component.html
@@ -1,1 +1,33 @@
-<p>login works!</p>
+<div class="min-h-screen flex items-center justify-center bg-[#f0ead6] py-12 px-4">
+  <div class="bg-white shadow-md rounded-2xl p-8 max-w-md w-full">
+    <h2 class="text-2xl font-bold mb-6 text-center text-gray-800">Iniciar Sesión</h2>
+
+    <form [formGroup]="loginForm" (ngSubmit)="login()" class="space-y-4">
+
+      <!-- Campo de email -->
+        <div>
+        <label class="block font-semibold mb-1">Correo electrónico</label>
+        <input type="email" formControlName="email"
+                class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500" />
+        <p *ngIf="loginForm.get('email')?.invalid && loginForm.get('email')?.touched"
+            class="text-red-500 text-sm">Correo inválido o requerido.</p>
+        </div>
+
+
+      <div>
+        <label class="block font-semibold mb-1">Contraseña</label>
+        <input type="password" formControlName="password"
+               class="w-full p-3 border border-gray-300 rounded-md focus:ring-2 focus:ring-blue-500" />
+        <p *ngIf="loginForm.get('password')?.invalid && loginForm.get('password')?.touched"
+           class="text-red-500 text-sm">Este campo es requerido.</p>
+      </div>
+
+      <p *ngIf="errorMensaje" class="text-red-600 text-sm text-center">{{ errorMensaje }}</p>
+
+      <button type="submit" [disabled]="loginForm.invalid"
+              class="w-full bg-blue-600 hover:bg-blue-700 text-white py-2 rounded-xl transition">
+        Ingresar
+      </button>
+    </form>
+  </div>
+</div>
